@@ -1,12 +1,9 @@
 package interpreter;
 
 import afs.interpreter.DefInterpreter;
-import afs.interpreter.EventInterpreter;
 import afs.interpreter.ExprInterpreter;
 import afs.interpreter.StmtInterpreter;
 import afs.interpreter.expressions.IntVal;
-import afs.interpreter.expressions.ListVal;
-import afs.interpreter.expressions.StringVal;
 import afs.interpreter.expressions.Val;
 import afs.interpreter.implementations.*;
 import afs.interpreter.interfaces.*;
@@ -19,23 +16,18 @@ import afs.nodes.event.EventNode;
 import afs.nodes.expr.*;
 import afs.nodes.stmt.*;
 import afs.nodes.type.TypeIntNode;
-import afs.nodes.type.TypeListNode;
 import afs.nodes.type.TypeNode;
-import afs.nodes.type.TypeVoidNode;
-import org.javatuples.Triplet;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.function.Executable;
+import setup.ASTGenerator;
 
-import java.util.ArrayList;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 public class StmtInterpreterTest {
-    private static ExprInterpreter exprInterpreter;
-    private static DefInterpreter defInterpreter;
-    private StmtInterpreter stmtInterpreter;
     private VarEnvironment envV;
     private FunEnvironment envF;
     private EventEnvironment envE;
@@ -44,10 +36,7 @@ public class StmtInterpreterTest {
     private int location;
 
     @BeforeEach
-    public void setUp() {
-        exprInterpreter = new ExprInterpreter();
-        defInterpreter = new DefInterpreter();
-        stmtInterpreter = new StmtInterpreter();
+    public void setUp(){
         envV = new MapVarEnvironment();
         envF = new MapFunEnvironment();
         envE = new MapEventEnvironment();
@@ -56,419 +45,271 @@ public class StmtInterpreterTest {
         location = 0;
     }
 
+    @Test
+    public void StmtAssignmentNodeTest(){
+        // Declare x = 5
+        envV.declare("x", location);
+        store.bind(location, new IntVal(5));
 
-    @Nested
-    class StmtAssignmentNodeTest {
-        @Test
-        public void StmtAssignmentNode() {
-            // Declare x = 5
-            int location = store.nextLocation();
-            store.declare(location, new IntVal(5));
-            envV.declare("x", location);
+        // assign x = 10
+        ExprNode expr = new ExprIntNode("10",0,0);
+        StmtNode assignment = new StmtAssignmentNode("x",expr ,0,0);
 
-            // assign x = 10
-            ExprNode expr = new ExprIntNode("10", 0, 0);
-            StmtNode assignment = new StmtAssignmentNode("x", expr, 0, 0);
+        StmtInterpreter.evalStmt(envV, envF, envE, location, assignment, store, imgStore);
 
-            var result = StmtInterpreter.evalStmt(envV, envF, envE, location, assignment, store, imgStore);
+        Val val = store.lookup(location);
 
-            IntVal val = (IntVal) result.getValue1().lookup(location);
-
-            assertTrue(val instanceof IntVal, "Expected value to be of type IntVal");
-            assertEquals(new IntVal(10), val, "Expected 10");
-
-        }
-
-        @Test
-        public void StmtAssignmentPassByValueNode() {
-            //  Declare x = 5
-            int locX = store.nextLocation();
-            envV.declare("x", locX);
-            store.declare(locX, new IntVal(5));
-
-            // Declare y = x (pass by value, so copy value of x)
-            int locY = store.nextLocation();
-            envV.declare("y", locY);
-            // Lookup x's value and copy it
-            Val xVal = store.lookup(locX);
-            store.declare(locY, xVal);
-
-            //  Assign x = 6
-            ExprNode expr6 = new ExprIntNode("6", 0, 0);
-            StmtNode assignX = new StmtAssignmentNode("x", expr6, 0, 0);
-            var result = StmtInterpreter.evalStmt(envV, envF, envE, locX, assignX, store, imgStore);
-            Store updatedStore = result.getValue1();
-
-            // Check y is still 5
-            Val yVal = updatedStore.lookup(locY);
-            assertEquals(new IntVal(5), yVal, "Expected y to remain 5");
-
-            // Also check x updated to 6
-            Val newXVal = updatedStore.lookup(locX);
-            assertEquals(new IntVal(6), newXVal, "Expected x to be updated to 6");
-        }
-
-        @Test
-        public void StmtAssignmentPassByReferenceNode() {
-            // Declare [int] x = [2, 3]
-            location = declareList("x", List.of(
-                    new ExprIntNode("2", 0, 0),
-                    new ExprIntNode("3", 0, 0)
-            ));
-
-            // Declare [int] y = x
-            // Simulate pass-by-reference by making y point to the same location as x
-            int locX = envV.lookup("x");
-            envV.declare("y", locX);  // y references the same location as x
-
-            // Assign x[0] = 1
-            List<ExprNode> indexExprs = List.of(new ExprIntNode("0", 0, 0));
-            ExprNode newVal = new ExprIntNode("1", 0, 0);
-            StmtNode listAssignment = new StmtListAssignmentNode("x", indexExprs, newVal, 0, 0);
-
-            var result = stmtInterpreter.evalStmt(envV, envF, envE, location, listAssignment, store, imgStore);
-
-            // Validate that y reflects the update, because it references same list
-            ListVal valY = (ListVal) result.getValue1().lookup(envV.lookup("y"));
-            List<Val> elements = valY.getValue();
-
-            assertEquals(new IntVal(1), elements.get(0), "Expected first element to be updated to 1");
-            assertEquals(new IntVal(3), elements.get(1), "Expected second element unchanged");
-
-        }
-    }
-
-
-    @Nested
-    class StmtCompositionNodeTest {
-        @Test
-        public void StmtCompositionNode() {
-            // Setup: declare int variable x = 0
-            location = store.nextLocation();
-            String varName = "x";
-            envV.declare(varName, location);
-            store.declare(location, new IntVal(0));
-
-            // First statement: x = 5;
-            ExprNode valueX = new ExprIntNode("5", 0, 0);
-            StmtNode assignX = new StmtAssignmentNode(varName, valueX, 0, 0);
-
-            // Second statement: return x;
-            ExprNode idX = new ExprIdentifierNode(varName, 0, 0);
-            StmtNode returnStmt = new StmtReturnNode(idX, 0, 0);
-
-            // Compose: assignX; return x;
-            StmtNode composition = new StmtCompositionNode(assignX, returnStmt, 0, 0);
-
-            // Evaluate composition
-            var result = StmtInterpreter.evalStmt(envV, envF, envE, location, composition, store, imgStore);
-
-            // Result should be return value 5
-            Val retVal = (Val) result.getValue0();
-            assertTrue(retVal instanceof IntVal, "Return value should be IntVal");
-            assertEquals(new IntVal(5), retVal, "Return value should be 5");
-
-            // Store should reflect x = 5
-            Val storedX = (Val) result.getValue1().lookup(location);
-            assertEquals(new IntVal(5), storedX, "Stored value of x should be 5");
-
-
-        }
-
-        @Test
-        public void StmtCompositionScopeNodeTest() {
-            // if (true) { int x = 5; }  // declare x inside if block
-            StmtNode ifStmt = new StmtIfNode(
-                    new ExprIntNode("1", 0, 0),  // condition = true
-                    new StmtDeclarationNode(
-                            new TypeIntNode(0, 0),   // int type
-                            "x",
-                            new ExprIntNode("5", 0, 0),
-                            new StmtSkipNode(),      // no next statement inside if block
-                            0, 0
-                    ),
-                    new StmtSkipNode(),            // else skip
-                    0, 0
-            );
-
-            // Compose: if statement + assignment x = 10 outside if block
-            StmtNode stmt = new StmtCompositionNode(
-                    ifStmt,
-                    new StmtAssignmentNode("x", new ExprIntNode("10", 0, 0), 0, 0),
-                    0, 0
-            );
-
-
-            // The assignment to x should fail (x out of scope)
-            assertThrows(RuntimeException.class, () -> {
-                StmtInterpreter.evalStmt(envV, envF, envE, location, stmt, store, imgStore);
-            }, "Expected RuntimeException when assigning to variable outside its scope");
-
-
-        }
-
-
+        assertInstanceOf(IntVal.class, val, "Expected value to be of type IntVal");
+        assertEquals(new IntVal(10), val, "Expected 10");
     }
 
 
     @Test
-    public void StmtDeclarationNodeTest() {
-        // Declare int x = 50;
-        ExprNode expr = new ExprIntNode("50", 0, 0);
-        StmtNode skip = new StmtSkipNode();
-        TypeNode type = new TypeIntNode(0, 0);
+    public void StmtCompositionNodeTest(){
+        // Setup: declare int variable x = 0
         String varName = "x";
-        StmtNode stmt = new StmtDeclarationNode(type, varName, expr, skip, 0, 0);
+        envV.declare(varName, location);
+        store.bind(location, new IntVal(0));
 
-        int location = store.nextLocation();
-        var result = StmtInterpreter.evalStmt(envV, envF, envE, location, stmt, store, imgStore);
+        // First statement: x = 5;
+        ExprNode valueX = new ExprIntNode("5", 0, 0);
+        StmtNode assignX = new StmtAssignmentNode(varName, valueX, 0, 0);
 
-        Store updatedStore = result.getValue1();
+        // Second statement: return x;
+        ExprNode idX = new ExprIdentifierNode(varName, 0, 0);
+        StmtNode returnStmt = new StmtReturnNode(idX, 0, 0);
 
-        // Now lookup x in the updated environment
-        int varLocation = envV.lookup(varName);
+        // Compose: assignX; return x;
+        StmtNode composition = new StmtCompositionNode(assignX, returnStmt, 0, 0);
 
-        Val val = (Val) updatedStore.lookup(varLocation);
-        assertEquals(new IntVal(50), val, "Expected 50");
+        // Evaluate composition
+        var result = StmtInterpreter.evalStmt(envV, envF, envE, location, composition, store, imgStore);
 
+        // Result should be return value 5
+        Val retVal = result.getValue0();
+        assertInstanceOf(IntVal.class, retVal, "Return value should be IntVal");
+        assertEquals(new IntVal(5), retVal, "Return value should be 5");
 
+        // Store should reflect x = 5
+        Val storedX = result.getValue1().lookup(location);
+        assertEquals(new IntVal(5), storedX, "Stored value of x should be 5");
+    }
+
+    @Test
+    public void StmtDeclarationNodeTest(){
+        // Arrange
+        String type = "int";
+        String varName = "testVarX";
+        int testValue = 50;
+        String testInput = String.format("%s %s = %d;", type, varName, testValue);
+        StmtNode stmt = ASTGenerator.parseStmt(testInput);
+
+        // Act
+        StmtInterpreter.evalStmt(envV, envF, envE, location, stmt, store, imgStore);
+
+        // Assert
+        Val val = store.lookup(location);
+        assertInstanceOf(IntVal.class, val);
+        assertEquals(testValue, val.asInt());
     }
 
 
     @Nested
-    class StmtFunctionCallNodeTest {
+    class StmtFunctionCallNodeTest{
         @Test
-        public void StmtFunctionNode() {
-            // Setup function parmeter x
-            String paramName = "x";
-            TypeNode type = new TypeIntNode(0, 0);
-            List<Param> params = List.of(new Param(type, paramName, 0, 0));
+        public void StmtFunctionNode(){
+
+            // Setup function parameter x
+            String paramName =  "x";
+            TypeNode type = new TypeIntNode(0,0);
+            List<Param> params = List.of ( new Param(type,paramName,0,0));
 
             // Setup function body return x + 1
             ExprNode paramExpr = new ExprIdentifierNode(paramName, 0, 0);
-            ExprNode value = new ExprIntNode("1", 0, 0);
-            ExprNode bodyExpr = new ExprBinopNode(paramExpr, BinOp.ADD, value, 0, 0);
+            ExprNode value = new ExprIntNode("1",0,0);
+            ExprNode bodyExpr = new ExprBinopNode(paramExpr, BinOp.ADD, value, 0,0);
             StmtNode funcBody = new StmtReturnNode(bodyExpr, 0, 0);
 
 
-            // Declare n = 5
-            int location = store.nextLocation();
-            String n = "n";
-            envV.declare(n, location);
-            store.declare(location, new IntVal(5));
             // Create function definition
             String funcName = "increment";
             String eventName = "ev1";
-            List<ExprNode> eventArgs = List.of(new ExprIdentifierNode(n, 0, 0));
+            List<ExprNode> eventArgs = List.of(new ExprIntNode("2", 0, 0));
 
             // Use helper to create the function def node
             DefNode functionDef = createFunction(type, funcName, params, funcBody, eventName, eventArgs);
 
 
-            // Evaluate the function declaration to register it in function enviroment
-            var defResult = defInterpreter.evalDef(envV, envF, envE, location, functionDef, store, imgStore);
+            // Evaluate the function declaration to register it in function environment
+            DefInterpreter.evalDef(envV, envF, envE, location, functionDef, store, imgStore);
+
 
             // Create function call increment(6)
+            List<ExprNode> args = List.of(new ExprIntNode("6",0,0));
+            StmtNode funcCall = new StmtFunctionCallNode(funcName, args,0,0);
 
-            List<ExprNode> args = List.of(new ExprIntNode("6", 0, 0));
-            StmtNode funcCall = new StmtFunctionCallNode(funcName, args, 0, 0);
-
-            // Evaluate the function call statement using stmtInterpreter.evalStmt
-            var callResult = stmtInterpreter.evalStmt(envV, envF, envE, location, funcCall, store, imgStore);
+            // Evaluate the function call statement using StmtInterpreter.evalStmt
+            var callResult = StmtInterpreter.evalStmt(envV, envF, envE, location, funcCall, store, imgStore);
 
             // Get the return value
-            Val returnVal = (Val) callResult.getValue0();
+            Val returnVal = callResult.getValue0();
 
             // Your assertions here, for example:
             assertNotNull(returnVal);
-            assertTrue(returnVal instanceof IntVal);
+            assertInstanceOf(IntVal.class, returnVal);
             assertEquals(7, ((IntVal) returnVal).getValue());
 
         }
 
         @Test
-        public void StmtFunctionPassByValueNode() {
-
-            /// Declare a variable: int x = 5
+        public void StmtFunctionPassByValueNode_LiteralPassed(){
+            // Arrange
             String varName = "x";
-            location = store.nextLocation();
-            envV.declare(varName, location);
-            IntVal val = new IntVal(5);
-            store.declare(location, val);
+            int initialVal = 5;
+            String input = String.format(
+                    "int %s = %d;\n" +
+                    "\n" +
+                    "fn void increment(int x) {\n" +
+                    "    %s = %s + 1;\n" +
+                    "}\n" +
+                    "\n" +
+                    "visualize increment(1):\n" +
+                    "    a do b();", varName, initialVal, varName, varName);
+            DefNode def = ASTGenerator.parseDef(input);
 
-            // Define a function with param x (int), return type void
-            String paramName = "x";
-            TypeNode paramType = new TypeIntNode(0, 0);
-            List<Param> params = List.of(new Param(paramType, paramName, 0, 0));
+            // Act
+            DefInterpreter.evalDef(envV, envF, envE, location, def, store, imgStore);
 
-            // Function body: x = x + 1; (but no return, and return type is void)
-            ExprNode one = new ExprIntNode("1", 0, 0);
-            ExprNode xIdentifier = new ExprIdentifierNode(paramName, 0, 0);
-            ExprNode addExpr = new ExprBinopNode(xIdentifier, BinOp.ADD, one, 0, 0);
-            StmtNode assignment = new StmtAssignmentNode(paramName, addExpr, 0, 0);
-
-            // No return statement, just a side-effect inside the function
-            StmtNode funcBody = assignment;
-
-            // Declare n = 5
-            int location = store.nextLocation();
-            String n = "n";
-            envV.declare(n, location);
-
-            store.declare(location, new IntVal(5));
-
-            // Define the function increment(x: Int): Void
-            String funcName = "incrementVoid";
-            String eventName = "ev1";
-            List<ExprNode> eventArgs = List.of(new ExprIdentifierNode(n, 0, 0));
-            TypeNode voidType = new TypeVoidNode(0, 0);
-            DefNode functionDef = createFunction(voidType, funcName, params, funcBody, eventName, eventArgs);
-
-            // Register the function in the environment
-            defInterpreter.evalDef(envV, envF, envE, location, functionDef, store, imgStore);
-
-            // Call incrementVoid(x)
-            List<ExprNode> args = List.of(new ExprIdentifierNode(varName, 0, 0));
-            StmtNode funcCall = new StmtFunctionCallNode(funcName, args, 0, 0);
-
-            // Evaluate the function call
-            var callResult = stmtInterpreter.evalStmt(envV, envF, envE, location, funcCall, store, imgStore);
-
-            // The function is void, so return value should be null or VoidVal
-            Val returnVal = (Val) callResult.getValue0();
-            assertTrue(returnVal == null, "Expected null return from void function");
-
-            // Check that the original variable 'x' was NOT changed (pass-by-value)
-            IntVal finalVal = (IntVal) store.lookup(location);
-            assertEquals(5, finalVal.getValue(), "Expected variable x to remain unchanged due to pass-by-value");
-
+            // Assert
+            Val finalVal = store.lookup(location);
+            assertEquals(initialVal, finalVal.asInt(), "Expected the value not to be changed");
         }
 
         @Test
-        public void StmtFunctionCallPassByReferenceNode() {
-
-
-            String vizFuncName = "logListLength";
-            String vizParamName = "n";
-            TypeNode listType = new TypeListNode(new TypeIntNode(0, 0), 0, 0); // List<Int>
-            List<Param> vizParams = List.of(new Param(listType, vizParamName, 0, 0));
-
-            // Body: skip or some dummy action (here: skip, as we may not have print support)
-            StmtNode vizBody = new StmtSkipNode();
-
-            // Declare n = 5
-            int location = store.nextLocation();
-            String n = "n";
-            envV.declare(n, location);
-
-            store.declare(location, new IntVal(5));
-
-
-            // Create function definition with void return type
-            TypeNode voidType = new TypeVoidNode(0, 0);
-            String funcName = "incrementFirst";
-            String eventName = "ev1";
-            List<ExprNode> eventArgs = List.of(new ExprIdentifierNode(n, 0, 0));
-
-
-            EventNode eventDecl = new EventDeclarationNode(eventName, vizFuncName, eventArgs, 0, 0);
-            DefNode visualize = new DefVisualizeNode(vizFuncName, eventArgs, eventDecl, 0, 0);
-
-            DefNode vizFunction = new DefFunctionNode(voidType, vizFuncName, vizParams, vizBody,
-                    visualize, 0, 0);
-
-            // Register it
-            defInterpreter.evalDef(envV, envF, envE, location, vizFunction, store, imgStore);
-
-
-            // Declare list variable x = [1, 3]
+        public void StmtFunctionPassByValueNode_IdentifierPassed(){
+            // Arrange
             String varName = "x";
-            location = declareList(varName, List.of(
-                    new ExprIntNode("1", 0, 0),
-                    new ExprIntNode("3", 0, 0)
-            ));
+            int initialVal = 5;
+            String input = String.format(
+                    "int %s = %d;\n" +
+                    "\n" +
+                    "fn void increment(int x) {\n" +
+                    "    %s = %s + 1;\n" +
+                    "}\n" +
+                    "\n" +
+                    "visualize increment(x):\n" +
+                    "    a do b();", varName, initialVal, varName, varName);
+            DefNode def = ASTGenerator.parseDef(input);
 
-            ListVal originalList = (ListVal) store.lookup(location);
-            assertEquals(1, ((IntVal) originalList.getValue().get(0)).getValue());
-            assertEquals(3, ((IntVal) originalList.getValue().get(1)).getValue());
-            System.out.println("Original list stored at location: " + location);
+            // Act
+            DefInterpreter.evalDef(envV, envF, envE, location, def, store, imgStore);
 
+            // Assert
+            Val finalVal = store.lookup(location);
+            assertEquals(initialVal, finalVal.asInt(), "Expected the value not to be changed");
+        }
 
-            // Function parameter: list x (type is list of int)
-            String paramName = "x";
+        @Test
+        public void StmtFunctionPassByReference_IdentifierPassed(){
+            // Arrange
+            String varName = "x";
+            int value0 = 4, value1 = 5;
+            String listValue = String.format("[%d, %d]", value0, value1);
+            ExprNode exprNode = ASTGenerator.parseExpr(listValue);
+            String input = String.format(
+                    "[int] %s = [1, 2, 3];\n" +
+                    "\n" +
+                    "fn void increment([int] x) {\n" +
+                    "    %s = %s;\n" +
+                    "}\n" +
+                    "\n" +
+                    "visualize increment(x):\n" +
+                    "    a do b();", varName, varName, listValue);
+            DefNode def = ASTGenerator.parseDef(input);
 
-            TypeNode type = new TypeListNode(new TypeIntNode(0, 0), 0, 0); // List<Int>
-            List<Param> params = List.of(new Param(type, paramName, 0, 0));
-            // DEBUG: Verify parameter type
-            assertTrue(params.get(0).getType() instanceof TypeListNode,
-                    "Parameter should be list type");
+            // Act
+            Val listVal = ExprInterpreter.evalExpr(envV, envF, envE, location, exprNode, store, imgStore).getValue0();
+            DefInterpreter.evalDef(envV, envF, envE, location, def, store, imgStore);
 
+            // Assert
+            Val finalVal = store.lookup(location);
+            assertEquals(listVal.asList().size(), finalVal.asList().size(), "Expected the value to be changed");
+            assertEquals(value0, listVal.asList().getFirst().asInt());
+            assertEquals(value1, listVal.asList().getLast().asInt());
+        }
 
-            // Function body: x[0] = x[0] + 1 (increment first element)
-            ExprNode indexExpr = new ExprIntNode("0", 0, 0);
-            ExprNode elemAtZero = new ExprListAccessNode(paramName, List.of(indexExpr), 0, 0);
-            ExprNode one = new ExprIntNode("1", 0, 0);
-            ExprNode newVal = new ExprBinopNode(elemAtZero, BinOp.ADD, one, 0, 0);
-            StmtNode assignment = new StmtListAssignmentNode(paramName, List.of(indexExpr), newVal, 0, 0);
+        @Test
+        public void StmtFunctionPassByReference_IdentifierIndexPassed(){
+            // Arrange
+            String varName = "x";
+            String listValue = "[4, 5, 9]";
+            String input = String.format(
+                    "[[int]] %s = [[1, 2, 3],[6,7]];\n" +
+                    "\n" +
+                    "fn void increment([[int]] x) {\n" +
+                    "    %s[0] = %s;\n" +
+                    "}\n" +
+                    "\n" +
+                    "visualize increment(x[1]):\n" +
+                    "    a do b();", varName, varName, listValue);
+            DefNode def = ASTGenerator.parseDef(input);
 
-            // Function return type void (no return statement)
-            StmtNode funcBody = assignment; // just the assignment, no return
+            // Act
+            Executable action = () -> DefInterpreter.evalDef(envV, envF, envE, location, def, store, imgStore);
 
+            // Assert
+            Exception exception = assertThrows(RuntimeException.class, action);
+            assertTrue(
+                    exception.getMessage().contains("Arrays are call-by-reference - cannot pass an array literal or an index of an array"),
+                    "Expected error as x[1] cannot be looked up in the environment"
+            );
+        }
 
-            DefNode functionDef = new DefFunctionNode(voidType, funcName, params, funcBody, vizFunction, 0, 0);
+        @Test
+        public void StmtFunctionPassByReference_LiteralArrayPassed(){
+            // Arrange
+            String varName = "x";
+            String listValue = "[4, 5, 9]";
+            String input = String.format(
+                    "[int] %s = [1, 2, 3];\n" +
+                    "\n" +
+                    "fn void increment([int] x) {\n" +
+                    "    %s = %s;\n" +
+                    "}\n" +
+                    "\n" +
+                    "visualize increment([7,8,10]):\n" +
+                    "    a do b();", varName, varName, listValue);
+            DefNode def = ASTGenerator.parseDef(input);
 
-            // Register the function in the environment
-            defInterpreter.evalDef(envV, envF, envE, location, functionDef, store, imgStore);
+            // Act
+            Executable action = () -> DefInterpreter.evalDef(envV, envF, envE, location, def, store, imgStore);
 
-
-            // Call function incrementFirst(x)
-            List<ExprNode> args = List.of(new ExprIdentifierNode(varName, 0, 0));
-            // DEBUG: Verify argument is identifier node
-            assertTrue(args.get(0) instanceof ExprIdentifierNode,
-                    "Argument must be variable reference");
-            assertEquals(varName, ((ExprIdentifierNode) args.get(0)).getIdentifier());
-
-
-            StmtNode funcCall = new StmtFunctionCallNode(funcName, args, 0, 0);
-
-
-            // Evaluate the function call (should modify list x in place)
-            var callResult = stmtInterpreter.evalStmt(envV, envF, envE, location, funcCall, store, imgStore);
-
-
-            // Since function is void, return value should be null
-            Val returnVal = (Val) callResult.getValue0();
-            assertTrue(returnVal == null, "Expected null since void retun type");
-
-            // Check that the list x was modified: x[0] == 2 now (1 + 1)
-            ListVal updatedList = (ListVal) store.lookup(location);
-            List<Val> elements = updatedList.getValue();
-
-            assertEquals(2, ((IntVal) elements.get(0)).getValue(), "Expected first element incremented");
-            assertEquals(3, ((IntVal) elements.get(1)).getValue(), "Expected second element unchanged");
-
+            // Assert
+            Exception exception = assertThrows(RuntimeException.class, action);
+            assertTrue(
+                    exception.getMessage().contains("Arrays are call-by-reference - cannot pass an array literal or an index of an array"),
+                    "Expected error as x[1] cannot be looked up in the environment"
+            );
         }
     }
 
-
     @Test
-    public void StmtIfNodeTest() {
+    public void StmtIfNodeTest(){
         // Declare x
-        location = store.nextLocation();
         String varName = "x";
         envV.declare(varName, location);
-        store.declare(location, new IntVal(0));
+        store.bind(location, new IntVal(0));
 
         // if (true) then x = 1 else x = 2
-        ExprNode exprThen = new ExprIntNode("1", 0, 0);
-        StmtNode thenStmt = new StmtAssignmentNode(varName, exprThen, 0, 0);
-        ExprNode exprElse = new ExprIntNode("2", 0, 0);
-        StmtNode elseStmt = new StmtAssignmentNode(varName, exprElse, 0, 0);
-        ExprNode bool = new ExprBoolNode("true", 0, 0);
-        StmtNode ifStmt = new StmtIfNode(bool, thenStmt, elseStmt, 0, 0);
+        ExprNode exprThen = new ExprIntNode("1",0,0);
+        StmtNode thenStmt = new StmtAssignmentNode(varName, exprThen, 0,0);
+        ExprNode exprElse = new ExprIntNode("2",0,0);
+        StmtNode elseStmt = new StmtAssignmentNode(varName, exprElse, 0,0);
+        ExprNode bool = new ExprBoolNode("true",0,0);
+        StmtNode ifStmt = new StmtIfNode(bool,thenStmt,elseStmt,0,0);
 
-        var result = stmtInterpreter.evalStmt(envV, envF, envE, location, ifStmt, store, imgStore);
-        Val value = (Val) result.getValue1().lookup(location);
+        var result = StmtInterpreter.evalStmt(envV, envF, envE, location, ifStmt, store, imgStore);
+        Val value = result.getValue1().lookup(location);
         assertEquals(new IntVal(1), value, "Expected 1");
 
 
@@ -476,10 +317,10 @@ public class StmtInterpreterTest {
 
 
     @Nested
-    class StmtListAssignmentNodeTest {
+    class StmtListAssignmentNodeTest{
 
         @Test
-        public void StmtListAssignmentNode1D() {
+        public void StmtListAssignmentNode1D(){
             String varName = "myList";
             location = declareList(varName, List.of(
                     new ExprIntNode("1", 0, 0),
@@ -488,16 +329,16 @@ public class StmtInterpreterTest {
             ));
 
             // Assign to myList[1] = 10;
-            List<ExprNode> indexExprs = List.of(new ExprIntNode("1", 0, 0));
-            ExprNode newVal = new ExprIntNode("10", 0, 0);
-            StmtNode listAssingment = new StmtListAssignmentNode(varName, indexExprs, newVal, 0, 0);
+            List<ExprNode> indexExprs = List.of(new ExprIntNode("1",0,0));
+            ExprNode newVal = new ExprIntNode("10",0,0);
+            StmtNode listAssingment = new StmtListAssignmentNode(varName, indexExprs, newVal, 0,0);
 
             // run list assignmemnt
-            var result2 = stmtInterpreter.evalStmt(envV, envF, envE, location, listAssingment, store, imgStore);
+            var result2 = StmtInterpreter.evalStmt(envV, envF, envE, location, listAssingment, store, imgStore);
 
             // validate updated list
-            ListVal updatedList = (ListVal) result2.getValue1().lookup(location);
-            List<Val> elements = updatedList.getValue();
+            Val updatedList = result2.getValue1().lookup(location);
+            List<Val> elements = updatedList.asList();
 
             assertEquals(3, elements.size(), "Expected updated list size to remain 3");
             assertEquals(new IntVal(1), elements.get(0), "Expected first element unchanged");
@@ -507,7 +348,7 @@ public class StmtInterpreterTest {
         }
 
         @Test
-        public void StmtListAssignmentNode2D() {
+        public void StmtListAssignmentNode2D(){
             // Prepare nested expressions as List of List<ExprNode>
             List<List<ExprNode>> nestedExprs = List.of(
                     List.of(new ExprIntNode("1", 0, 0), new ExprIntNode("2", 0, 0)),
@@ -529,31 +370,31 @@ public class StmtInterpreterTest {
             StmtNode listAssignment = new StmtListAssignmentNode(varName, indexExprs, newVal, 0, 0);
 
             // Run list assignment
-            var result2 = stmtInterpreter.evalStmt(envV, envF, envE, location, listAssignment, store, imgStore);
+            var result2 = StmtInterpreter.evalStmt(envV, envF, envE, location, listAssignment, store, imgStore);
 
             // Validate updated list
-            ListVal updatedOuterList = (ListVal) result2.getValue1().lookup(location);
-            List<Val> outerElements = updatedOuterList.getValue();
+            Val updatedOuterList = result2.getValue1().lookup(location);
+            List<Val> outerElements = updatedOuterList.asList();
 
             assertEquals(2, outerElements.size(), "Outer list size should remain 2");
 
             // First row should be unchanged: [1, 2]
-            ListVal firstRow = (ListVal) outerElements.get(0);
-            List<Val> firstRowElems = firstRow.getValue();
+            Val firstRow = outerElements.getFirst();
+            List<Val> firstRowElems = firstRow.asList();
             assertEquals(new IntVal(1), firstRowElems.get(0), "Unchanged element in first row, first column");
             assertEquals(new IntVal(2), firstRowElems.get(1), "Unchanged element in first row, second column");
 
 
             // Second row: [10, 4] after update
-            ListVal secondRow = (ListVal) outerElements.get(1);
-            List<Val> secondRowElems = secondRow.getValue();
+            Val secondRow = outerElements.get(1);
+            List<Val> secondRowElems = secondRow.asList();
             assertEquals(new IntVal(10), secondRowElems.get(0), "Updated element in second row, first column");
             assertEquals(new IntVal(4), secondRowElems.get(1), "Unchanged element in second row, second column");
 
         }
 
         @Test
-        public void StmtListAssignmentNodeOutOfBounds() {
+        public void StmtListAssignmentNodeOutOfBounds(){
 
             // Prepare list: [1, 3, 6]
             String varName = "myList";
@@ -569,36 +410,33 @@ public class StmtInterpreterTest {
             StmtNode listAssignment = new StmtListAssignmentNode(varName, indexExprs, newVal, 0, 0);
 
             // Assert exception thrown
-            assertThrows(IndexOutOfBoundsException.class, () -> {
-                stmtInterpreter.evalStmt(envV, envF, envE, location, listAssignment, store, imgStore);
-            }, "Expected out-of-bounds assignment to throw IndexOutOfBoundsException");
-
+            assertThrows(IndexOutOfBoundsException.class, () -> StmtInterpreter.evalStmt(envV, envF, envE, location, listAssignment, store, imgStore), "Expected out-of-bounds assignment to throw IndexOutOfBoundsException");
         }
 
     }
 
 
     @Test
-    public void StmtReturnNodeTest() {
+    public void StmtReturnNodeTest(){
         ExprNode returnExpr = new ExprIntNode("10", 0, 0);
-        StmtNode returnStmt = new StmtReturnNode(returnExpr, 0, 0);
+        StmtNode returnStmt = new StmtReturnNode(returnExpr,0,0);
 
         // Evaluate return statment
-        var result = stmtInterpreter.evalStmt(envV, envF, envE, location, returnStmt, store, imgStore);
-        Val returnVal = (Val) result.getValue0();
+        var result = StmtInterpreter.evalStmt(envV, envF, envE, location, returnStmt, store, imgStore);
+        Val returnVal =  result.getValue0();
 
-        assertTrue(returnVal instanceof IntVal, "Returned value should be IntVal");
+        assertInstanceOf(IntVal.class, returnVal, "Returned value should be IntVal");
         assertEquals(new IntVal(10), returnVal, "Returned value should be 10");
 
     }
 
 
     @Test
-    public void StmtSkipNodeTest() {
+    public void StmtSkipNodeTest(){
         StmtNode skipStmt = new StmtSkipNode();
 
         // Evaluate the skip statement
-        var result = stmtInterpreter.evalStmt(envV, envF, envE, location, skipStmt, store, imgStore);
+        var result = StmtInterpreter.evalStmt(envV, envF, envE, location, skipStmt, store, imgStore);
 
         // The value should be null since skip returns null as the first tuple value
         assertNull(result.getValue0(), "Expected null as return value for skip statement");
@@ -606,30 +444,29 @@ public class StmtInterpreterTest {
     }
 
     @Test
-    public void StmtWhileNodeTest() {
+    public void StmtWhileNodeTest(){
         // Declare x = 0
-        location = store.nextLocation();
         String varName = "x";
         envV.declare(varName, location);
         IntVal val = new IntVal(0);
-        store.declare(location, val);
+        store.bind(location, val);
 
         // While (x < 3)
-        ExprNode left = new ExprIdentifierNode(varName, 0, 0);
-        ExprNode right = new ExprIntNode("3", 0, 0);
-        ExprNode condition = new ExprBinopNode(left, BinOp.LT, right, 0, 0);
+        ExprNode left = new ExprIdentifierNode(varName, 0,0);
+        ExprNode right = new ExprIntNode("3",0,0);
+        ExprNode condition = new ExprBinopNode(left, BinOp.LT, right, 0,0);
 
         // Body x = x + 1;
-        ExprNode leftI = new ExprIdentifierNode(varName, 0, 0);
-        ExprNode rightI = new ExprIntNode("1", 0, 0);
-        ExprNode incrementExpr = new ExprBinopNode(leftI, BinOp.ADD, rightI, 0, 0);
-        StmtNode body = new StmtAssignmentNode(varName, incrementExpr, 0, 0);
+        ExprNode leftI = new ExprIdentifierNode(varName, 0,0);
+        ExprNode rightI = new ExprIntNode("1",0,0);
+        ExprNode incrementExpr = new ExprBinopNode(leftI, BinOp.ADD, rightI, 0,0);
+        StmtNode body = new StmtAssignmentNode(varName, incrementExpr, 0,0);
 
         // Whil loop node
-        StmtNode whileStmt = new StmtWhileNode(condition, body, 0, 0);
-        var result = stmtInterpreter.evalStmt(envV, envF, envE, location, whileStmt, store, imgStore);
+        StmtNode whileStmt = new StmtWhileNode(condition,body,0,0);
+        var result = StmtInterpreter.evalStmt(envV, envF, envE, location, whileStmt, store, imgStore);
 
-        Val finalVal = (Val) result.getValue1().lookup(location);
+        Val finalVal = result.getValue1().lookup(location);
         assertEquals(new IntVal(3), finalVal, "Expected 3");
 
     }
@@ -638,12 +475,11 @@ public class StmtInterpreterTest {
 
     private int declareList(String varName, List<ExprNode> exprs) {
         ExprNode listDeclar = new ExprListDeclaration(exprs, 0, 0);
-        var result = exprInterpreter.evalExpr(envV, envF, envE, location, listDeclar, store, imgStore);
-        Val listVal = (ListVal) result.getValue0();
+        var result = ExprInterpreter.evalExpr(envV, envF, envE, location, listDeclar, store, imgStore);
+        Val listVal = result.getValue0();
 
-        location = store.nextLocation();
-        envV.declare(varName, location);
-        store.declare(location, listVal);
+        envV.declare(varName, ++location);
+        store.bind(location, listVal);
         return location;
     }
 
@@ -655,12 +491,11 @@ public class StmtInterpreterTest {
 
         ExprNode nestedListDecl = new ExprListDeclaration(outerList, 0, 0);
 
-        var result = exprInterpreter.evalExpr(envV, envF, envE, location, nestedListDecl, store, imgStore);
-        Val listVal = (ListVal) result.getValue0();
+        var result = ExprInterpreter.evalExpr(envV, envF, envE, location, nestedListDecl, store, imgStore);
+        Val listVal = result.getValue0();
 
-        location = store.nextLocation();
-        envV.declare(varName, location);
-        store.declare(location, listVal);
+        envV.declare(varName, ++location);
+        store.bind(location, listVal);
 
         return location;
     }
@@ -678,10 +513,4 @@ public class StmtInterpreterTest {
 
         return new DefFunctionNode(returnType, funcName, params, body, visualize, 0, 0);
     }
-
-
-
-
-
-
 }
